Complete Flex examples

--- a/index.html
+++ b/index.html
@@ -36,6 +36,31 @@
 			<div class="p-3 bg-warning">Flex Item B</div>
 			<div class="p-3 bg-danger">Flex Item C</div>
 		</div>
+
+		<h2>Creating Space Between Elements</h2>
+		<div class="bg-dark p-3 d-md-flex justify-content-around">
+			<div class="p-3 bg-success col-md-2">Card A</div>
+			<div class="p-3 bg-warning col-md-2">Card B</div>
+			<div class="p-3 bg-danger col-md-2">Card C</div>
+		</div>
+
+		<h2>Flexbox with Margin</h2>
+		<div class="bg-dark p-3 d-flex">
+			<div class="p-3 bg-success mr-auto">Flex Item A</div>
+			<div class="p-3 bg-warning">Flex Item B</div>
+			<div class="p-3 bg-danger">Flex Item C</div>
+			<div class="p-3 bg-primary">Flex Item D</div>
+		</div>
+
+		<h2>Nested Flex Elements</h2>
+		<div class="bg-dark p-3 d-block d-md-flex">
+			<div class="p-3 bg-success mr-auto">Flex Item A</div>
+			<div class="w-50 d-block d-md-flex justify-content-between">
+				<div class="p-3 bg-warning">Flex Item B</div>
+				<div class="p-3 bg-danger">Flex Item C</div>
+				<div class="p-3 bg-primary">Flex Item D</div>
+			</div>
+		</div>
 	</div>
 
 
